# ai-governance-register

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.railway  LICENSE  README.md  docker-compose.yml  pyproject.toml  railway_start.sh  start.bat  start.sh
agr_frontend/pages/: 3_Register_System.py  6_Assessment_Detail.py
api/: database.py  main.py  models.py  schemas.py
api/routers/: assessments.py  classification.py  dashboard.py  seed.py  systems.py
api/services/: assessment.py  audit.py  export.py  llm_classifier.py  risk_classifier.py
data/sample/: seed_data.json
frontend/: app.py
frontend/pages/: 1_Dashboard.py  2_AI_Systems.py  3_Register_System.py  4_Risk_Classification.py  5_Assessments.py  6_Assessment_Detail.py  7_System_Detail.py
frontend/utils/: api_client.py  constants.py
tests/: conftest.py  test_assessments.py  test_audit.py  test_classification.py  test_dashboard.py  test_export.py  test_seed.py  test_systems.py
